plugins/e4sm.de.antlr4.petri.grammar/src-gen/e4sm/de/antlr4/petri/grammar/SCPNParser.java
// Generated from SCPN.g4 by ANTLR 4.9.3
package e4sm.de.antlr4.petri.grammar;

//Package is set in the build.gradle file
/*import gpal.*;
import gpal.parsers.ast.*;
import gpal.parsers.expr.*;
import java.util.*;*/

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SCPNParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NOW=1, HASH=2, APO=3, COPY=4, NEW=5, EXTRACT=6, EXP=7, DET=8, UNI=9, DUNI=10, 
		TRIANG=11, NORM=12, LONGNORM=13, WEI=14, QUESTION=15, COLON=16, ASSIGN=17, 
		EQUAL=18, LNOT=19, BNOT=20, NOT_EQUAL=21, DIV=22, DIV_ASSIGN=23, PLUS=24, 
		PLUS_ASSIGN=25, INC=26, MINUS=27, MINUS_ASSIGN=28, DEC=29, STAR=30, STAR_ASSIGN=31, 
		MOD=32, MOD_ASSIGN=33, SR=34, SR_ASSIGN=35, BSR=36, BSR_ASSIGN=37, GE=38, 
		GT=39, SL=40, SL_ASSIGN=41, LE=42, LT=43, BXOR=44, BXOR_ASSIGN=45, BOR=46, 
		BOR_ASSIGN=47, LOR=48, BAND=49, BAND_ASSIGN=50, LAND=51, NULL_LITERAL=52, 
		LPAREN=53, RPAREN=54, LCURLY=55, RCURLY=56, LBRACK=57, RBRACK=58, SEMI=59, 
		COMMA=60, DOT=61, DOLLAR=62, IDENTIFIER=63, PARNAME=64, INTEGER_LITERAL=65, 
		DECIMAL_LITERAL=66, DATETIME_LITERAL=67, STRING_LITERAL=68, BOOLEAN_LITERAL=69, 
		WS=70, COMMENT=71;
	public static final int
		RULE_expressions = 0, RULE_expression = 1, RULE_placeRef = 2, RULE_subTransName = 3, 
		RULE_moduleName = 4, RULE_constant = 5, RULE_numericalConstant = 6, RULE_mathematicalExpression = 7, 
		RULE_inputInscription = 8, RULE_outputInscription = 9, RULE_tokenTransfer = 10, 
		RULE_attributeAssignList = 11, RULE_attributeAssignment = 12, RULE_tokenDescription = 13, 
		RULE_timeFunction = 14, RULE_tokenCopy = 15, RULE_tokenNew = 16, RULE_tokenExtract = 17, 
		RULE_tokenReference = 18, RULE_tokenAttributeReference = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"expressions", "expression", "placeRef", "subTransName", "moduleName", 
			"constant", "numericalConstant", "mathematicalExpression", "inputInscription", 
			"outputInscription", "tokenTransfer", "attributeAssignList", "attributeAssignment", 
			"tokenDescription", "timeFunction", "tokenCopy", "tokenNew", "tokenExtract", 
			"tokenReference", "tokenAttributeReference"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'#'", "'''", null, null, null, null, null, null, null, null, 
			null, null, null, "'?'", "':'", "'='", "'=='", "'!'", "'~'", "'!='", 
			"'/'", "'/='", "'+'", "'+='", "'++'", "'-'", "'-='", "'--'", "'*'", "'*='", 
			"'%'", "'%='", "'>>'", "'>>='", "'>>>'", "'>>>='", "'>='", "'>'", "'<<'", 
			"'<<='", "'<='", "'<'", "'^'", "'^='", "'|'", "'|='", "'||'", "'&'", 
			"'&='", "'&&'", null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
			"','", "'.'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NOW", "HASH", "APO", "COPY", "NEW", "EXTRACT", "EXP", "DET", "UNI", 
			"DUNI", "TRIANG", "NORM", "LONGNORM", "WEI", "QUESTION", "COLON", "ASSIGN", 
			"EQUAL", "LNOT", "BNOT", "NOT_EQUAL", "DIV", "DIV_ASSIGN", "PLUS", "PLUS_ASSIGN", 
			"INC", "MINUS", "MINUS_ASSIGN", "DEC", "STAR", "STAR_ASSIGN", "MOD", 
			"MOD_ASSIGN", "SR", "SR_ASSIGN", "BSR", "BSR_ASSIGN", "GE", "GT", "SL", 
			"SL_ASSIGN", "LE", "LT", "BXOR", "BXOR_ASSIGN", "BOR", "BOR_ASSIGN", 
			"LOR", "BAND", "BAND_ASSIGN", "LAND", "NULL_LITERAL", "LPAREN", "RPAREN", 
			"LCURLY", "RCURLY", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "DOLLAR", 
			"IDENTIFIER", "PARNAME", "INTEGER_LITERAL", "DECIMAL_LITERAL", "DATETIME_LITERAL", 
			"STRING_LITERAL", "BOOLEAN_LITERAL", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SCPN.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SCPNParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExpressionsContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(SCPNParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(SCPNParser.COLON, i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterExpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitExpressions(this);
		}
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (COPY - 4)) | (1L << (NEW - 4)) | (1L << (EXTRACT - 4)) | (1L << (IDENTIFIER - 4)) | (1L << (INTEGER_LITERAL - 4)) | (1L << (DECIMAL_LITERAL - 4)))) != 0)) {
				{
				{
				setState(40);
				expression();
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(41);
					match(COLON);
					}
				}

				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public InputInscriptionContext inputInscription() {
			return getRuleContext(InputInscriptionContext.class,0);
		}
		public OutputInscriptionContext outputInscription() {
			return getRuleContext(OutputInscriptionContext.class,0);
		}
		public MathematicalExpressionContext mathematicalExpression() {
			return getRuleContext(MathematicalExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				inputInscription();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				outputInscription();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				mathematicalExpression(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				mathematicalExpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlaceRefContext extends ParserRuleContext {
		public Token placeName;
		public TerminalNode IDENTIFIER() { return getToken(SCPNParser.IDENTIFIER, 0); }
		public TerminalNode HASH() { return getToken(SCPNParser.HASH, 0); }
		public List<SubTransNameContext> subTransName() {
			return getRuleContexts(SubTransNameContext.class);
		}
		public SubTransNameContext subTransName(int i) {
			return getRuleContext(SubTransNameContext.class,i);
		}
		public ModuleNameContext moduleName() {
			return getRuleContext(ModuleNameContext.class,0);
		}
		public PlaceRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_placeRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterPlaceRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitPlaceRef(this);
		}
	}

	public final PlaceRefContext placeRef() throws RecognitionException {
		PlaceRefContext _localctx = new PlaceRefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_placeRef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HASH) {
				{
				setState(55);
				match(HASH);
				}
			}

			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(58);
					subTransName();
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(64);
				moduleName();
				}
				break;
			}
			setState(67);
			((PlaceRefContext)_localctx).placeName = match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubTransNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SCPNParser.IDENTIFIER, 0); }
		public TerminalNode LBRACK() { return getToken(SCPNParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(SCPNParser.RBRACK, 0); }
		public TerminalNode DOT() { return getToken(SCPNParser.DOT, 0); }
		public SubTransNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subTransName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterSubTransName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitSubTransName(this);
		}
	}

	public final SubTransNameContext subTransName() throws RecognitionException {
		SubTransNameContext _localctx = new SubTransNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_subTransName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(IDENTIFIER);
			setState(70);
			match(LBRACK);
			setState(71);
			match(RBRACK);
			setState(72);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SCPNParser.IDENTIFIER, 0); }
		public TerminalNode DOT() { return getToken(SCPNParser.DOT, 0); }
		public ModuleNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterModuleName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitModuleName(this);
		}
	}

	public final ModuleNameContext moduleName() throws RecognitionException {
		ModuleNameContext _localctx = new ModuleNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moduleName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(IDENTIFIER);
			setState(75);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public NumericalConstantContext numericalConstant() {
			return getRuleContext(NumericalConstantContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(SCPNParser.STRING_LITERAL, 0); }
		public TerminalNode DATETIME_LITERAL() { return getToken(SCPNParser.DATETIME_LITERAL, 0); }
		public TerminalNode BOOLEAN_LITERAL() { return getToken(SCPNParser.BOOLEAN_LITERAL, 0); }
		public TerminalNode NULL_LITERAL() { return getToken(SCPNParser.NULL_LITERAL, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constant);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER_LITERAL:
			case DECIMAL_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				numericalConstant();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(STRING_LITERAL);
				}
				break;
			case DATETIME_LITERAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				match(DATETIME_LITERAL);
				}
				break;
			case BOOLEAN_LITERAL:
				enterOuterAlt(_localctx, 5);
				{
				setState(81);
				match(BOOLEAN_LITERAL);
				}
				break;
			case NULL_LITERAL:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				match(NULL_LITERAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericalConstantContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() { return getToken(SCPNParser.INTEGER_LITERAL, 0); }
		public TerminalNode DECIMAL_LITERAL() { return getToken(SCPNParser.DECIMAL_LITERAL, 0); }
		public NumericalConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericalConstant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterNumericalConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitNumericalConstant(this);
		}
	}

	public final NumericalConstantContext numericalConstant() throws RecognitionException {
		NumericalConstantContext _localctx = new NumericalConstantContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numericalConstant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_la = _input.LA(1);
			if ( !(_la==INTEGER_LITERAL || _la==DECIMAL_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathematicalExpressionContext extends ParserRuleContext {
		public NumericalConstantContext numericalConstant() {
			return getRuleContext(NumericalConstantContext.class,0);
		}
		public List<MathematicalExpressionContext> mathematicalExpression() {
			return getRuleContexts(MathematicalExpressionContext.class);
		}
		public MathematicalExpressionContext mathematicalExpression(int i) {
			return getRuleContext(MathematicalExpressionContext.class,i);
		}
		public TerminalNode STAR() { return getToken(SCPNParser.STAR, 0); }
		public TerminalNode DIV() { return getToken(SCPNParser.DIV, 0); }
		public TerminalNode PLUS() { return getToken(SCPNParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(SCPNParser.MINUS, 0); }
		public MathematicalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathematicalExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterMathematicalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitMathematicalExpression(this);
		}
	}

	public final MathematicalExpressionContext mathematicalExpression() throws RecognitionException {
		return mathematicalExpression(0);
	}

	private MathematicalExpressionContext mathematicalExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MathematicalExpressionContext _localctx = new MathematicalExpressionContext(_ctx, _parentState);
		MathematicalExpressionContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_mathematicalExpression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(88);
			numericalConstant();
			}
			_ctx.stop = _input.LT(-1);
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(96);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new MathematicalExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_mathematicalExpression);
						setState(90);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(91);
						_la = _input.LA(1);
						if ( !(_la==DIV || _la==STAR) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(92);
						mathematicalExpression(3);
						}
						break;
					case 2:
						{
						_localctx = new MathematicalExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_mathematicalExpression);
						setState(93);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(94);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(95);
						mathematicalExpression(2);
						}
						break;
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class InputInscriptionContext extends ParserRuleContext {
		public Token multiplicity;
		public TerminalNode IDENTIFIER() { return getToken(SCPNParser.IDENTIFIER, 0); }
		public TerminalNode APO() { return getToken(SCPNParser.APO, 0); }
		public TerminalNode INTEGER_LITERAL() { return getToken(SCPNParser.INTEGER_LITERAL, 0); }
		public TerminalNode DECIMAL_LITERAL() { return getToken(SCPNParser.DECIMAL_LITERAL, 0); }
		public InputInscriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputInscription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).enterInputInscription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SCPNListener ) ((SCPNListener)listener).exitInputInscription(this);
		}
	}

	public final InputInscriptionContext inputInscription() throws RecognitionException {
		InputInscriptionContext _localctx = new InputInscriptionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inputInscription);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(IDENTIFIER);
				}
				break;
			case INTEGER_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				((InputInscriptionContext)_localctx).multiplicity = match(INTEGER_LITERAL);
				setState(103);
				match(APO);
				setState(104);
				match(IDENTIFIER);
				}
				break;
			case DECIMAL_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				match(DECIMAL_LITERAL);
				setState(106);
				match(APO);
				setState(107);
				match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
